--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,5 @@
 <resources>
     <string name="app_name">LibertadoresUpdates</string>
+    <string name="email_required">Email obrigatório</string>
+    <string name="password_required">Senha obrigatória</string>
 </resources>
