--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,6 +4,6 @@
     <string name="password_required">Senha obrigatória</string>
     <string name="senha_tamanho_required">Senha precisa ter ao menos 6 caracteres</string>
     <string name="senha_required">Senha obrigatória</string>
-    <string name="welcome">Bem vindo/a</string>
-    <string name="sucesso_cadastro_autenticado">Email autenticado, para concluir o cadastro preencha o perfil!</string>
+    <string name="welcome">Bem vindo/a!</string>
+    <string name="sucesso_cadastro_autenticado">Email autenticado!</string>
 </resources>
