Arrumando código que ficou todo cagado e função dos jogos anteriores

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,10 +1,11 @@
 <resources>
-    <string name="app_name">ChampionsUpdates</string>
+    <string name="app_name">Champions Updates</string>
     <string name="email_required">Email obrigatório</string>
     <string name="password_required">Senha obrigatória</string>
     <string name="senha_tamanho_required">Senha precisa ter ao menos 6 caracteres</string>
     <string name="senha_required">Senha obrigatória</string>
     <string name="welcome">Bem vindo/a!</string>
     <string name="sucesso_cadastro_autenticado">Email autenticado!</string>
-    <string name="empty_jogos_futuros">Não existe jogos futuros no momento!</string>
+    <string name="empty_jogos_futuros">Não há jogos futuros no momento!</string>
+    <string name="empty_current_jogos">Não há jogos acontecendo!</string>
 </resources>
