Creio que seja a versão final.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -8,4 +8,28 @@
     <string name="sucesso_cadastro_autenticado">Email autenticado!</string>
     <string name="empty_jogos_futuros">Não há jogos futuros no momento!</string>
     <string name="empty_current_jogos">Não há jogos acontecendo!</string>
+    <string name="proximos_jogos_botao">Próximos jogos</string>
+    <string name="titulo_jogos_pag">Todos os jogos</string>
+    <string name="jogos_passados_botao">Jogos Passados</string>
+    <string name="jogos_acontecendo_botao">Jogos Acontecendo</string>
+    <string name="senha">Senha</string>
+    <string name="e_mail">E-mail</string>
+    <string name="esqueci_a_senha">Esqueci a senha</string>
+    <string name="login">Login</string>
+    <string name="ou">ou</string>
+    <string name="cadastrar">Cadastrar</string>
+    <string name="titulo_login">Champions Updates</string>
+    <string name="titulo_cadastro">Preencha os dados a baixo para finalizar seu cadastro</string>
+    <string name="titulo_perfil">PERFIL</string>
+    <string name="nome_completo">Nome Completo</string>
+    <string name="telefone">Telefone</string>
+    <string name="time_do_coracao">Time do coração</string>
+    <string name="salvar">Salvar</string>
+    <string name="voltar">Voltar</string>
+    <string name="enviar">Enviar</string>
+    <string name="titulo_recup_senha">Informe o e-mail para a recuperação de senha</string>
+    <string name="logo_do_time_da_casa">Logo do time da casa</string>
+    <string name="logo_do_time_de_fora">Logo do time de fora</string>
+    <string name="vs">vs</string>
+    <string name="logo">logo</string>
 </resources>
