--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -32,4 +32,5 @@
     <string name="logo_do_time_de_fora">Logo do time de fora</string>
     <string name="vs">vs</string>
     <string name="logo">logo</string>
+    <string name="title_activity_maps">Map</string>
 </resources>
