mudanças do mapa

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -36,28 +36,28 @@
     <string name="conection_error">Erro. Verifique sua conexão com a internet.</string>
     <string name="you">Você</string>
     <string name="error">Não foi possível recuperar os dados</string>
-    <string name="nome">\"Nome: \"</string>
-    <string name="pais">\"País: \"</string>
-    <string name="estadio">\"Estádio: \"</string>
-    <string name="fundacao">\"Fundação: \"</string>
+    <string name="nome">\Nome: \</string>
+    <string name="pais">\País: \</string>
+    <string name="estadio">\Estádio: \</string>
+    <string name="fundacao">\Fundação: \</string>
     <string name="desconhecido">Desconhecido</string>
-    <string name="jogos">\"Jogos: \"</string>
-    <string name="vitorias">\"Vitórias: \"</string>
-    <string name="empates">\"Empates: \"</string>
-    <string name="derrotas">\"Derrotas: \"</string>
-    <string name="pontos">\"Pontos : \"</string>
-    <string name="saldo_gols">\"Saldo de gols: \"</string>
-    <string name="posicao">\"Posição: \"</string>
+    <string name="jogos">\Jogos: \</string>
+    <string name="vitorias">\Vitórias: \</string>
+    <string name="empates">\Empates: \</string>
+    <string name="derrotas">\Derrotas: \</string>
+    <string name="pontos">\Pontos : \</string>
+    <string name="saldo_gols">\Saldo de gols: \</string>
+    <string name="posicao">\Posição: \"</string>
     <string name="indefinido">Indefinido</string>
-    <string name="data">\"Data: \"</string>
-    <string name="rodada">\"Rodada: \"</string>
-    <string name="status_partida">\"Status da partida: \"</string>
-    <string name="arbitro">\"Árbitro: \"</string>
-    <string name="placar_intervalo">\"Placar intervalo \"</string>
-    <string name="placar_prorrogacao">\"Placar prorrogação \"</string>
-    <string name="placar_penaltis">\"Placar pênaltis \"</string>
+    <string name="data">\Data: \</string>
+    <string name="rodada">\Rodada: \</string>
+    <string name="status_partida">\Status da partida: \</string>
+    <string name="arbitro">\Árbitro: \</string>
+    <string name="placar_intervalo">\Placar intervalo \</string>
+    <string name="placar_prorrogacao">\Placar prorrogação \</string>
+    <string name="placar_penaltis">\Placar pênaltis \</string>
     <string name="cancelado">Cancelado</string>
-    <string name="numero">\"Número: \"</string>
-    <string name="idade">\"Idade: \"</string>
-    <string name="nacionalidade">\"Nacionalidade: \"</string>
+    <string name="numero">\Número: \</string>
+    <string name="idade">\Idade: \</string>
+    <string name="nacionalidade">\Nacionalidade: \</string>
 </resources>
