--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -67,4 +67,5 @@
     <string name="map">MAPA</string>
     <string name="chatbot">CHATBOT</string>
     <string name="atualizar_tabela">Atualizar tabela</string>
+    <string name="last_update">\Última atualização: \</string>
 </resources>
