--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -72,4 +72,5 @@
     <string name="title">Mapa ChampionsUpdates</string>
     <string name="ok">OK, ENTENDI</string>
     <string name="not_show_again">NÃO MOSTRAR NOVAMENTE</string>
+    <string name="elenco">Elenco:</string>
 </resources>
